# bibleverseparser

./: .gitignore  LICENSE  README.md  pyproject.toml
src/bibleverseparser/: __init__.py  constants.py  languages.py  parsing.py
tests/: test_parsing.py
